# pod_hd_edit

./: README.md  meson.build
demo/: demo.c  meson.build
gui/: amp.cpp  amp.h  ampItem.cpp  ampItem.h  fxItem.cpp  fxItem.h  main.cpp  mainWindow.cpp  mainWindow.h  meson.build  mixItem.cpp  mixItem.h  rectTextItem.cpp  rectTextItem.h
gui/rc/: pod_hd_edit.qrc
gui/ui/: amp.ui  mainWindow.ui
lib/: meson.build
lib/include/: podhd_preset.h  podhdctrl.h
lib/src/: list.h  parser.c  podhdctrl.c  podhdctrl_int.h
test/: meson.build  test.c
